[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "applause-common-reporter"
description = "A common reporter interface for integrating Applause Services with various testrunners"
readme = "README.md"
version = "1.0.0"
authors = ["Applause"]
homepage = "https://github.com/ApplauseOSS/common-python-reporter"
license = "LICENSE"
packages = [ { include = "applause", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.32.3"
pydantic = "^2.8.2"
humps = "^0.2.2"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"
setuptools = "^74.1.1"
tox = "^4.18.0"
responses = "^0.25.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"